--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -17,7 +17,8 @@ jobs:
       - name: 🧰 Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "stable"
+          flutter-version: "3.29.2"
+          
 
       - name: 📦 Get dependencies
         run: flutter pub get
